--- a/frontend/display_allbooks.html
+++ b/frontend/display_allbooks.html
@@ -9,9 +9,9 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-color: #f17193;">
+<body style="background-color: #efccd6;">
     <div class="container mt-5">
-        <h2 class="text-center text-white mb-4">Books List</h2>
+        <h2 class="text-center mb-4" style="color: black;">Books List</h2>
         <div id="booksList" class="card-columns">
             <!-- Books will be dynamically added here using JavaScript -->
         </div>
