--- a/frontend/display_lateloans.html
+++ b/frontend/display_lateloans.html
@@ -9,7 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-color: #f17193;">
+<body style="background-color: #efccd6;">
     <div class="container mt-5">
         <h2>Late Loans</h2>
         <div id="welcomeMessage" style="display: none;">
