--- a/frontend/main.html
+++ b/frontend/main.html
@@ -39,14 +39,14 @@
 
         /* Pink buttons */
         .btn-pink {
-            background-color: #ff4081;
-            border-color: #ff4081;
+            background-color: #fa3c75;
+            border-color: #fa4679;
         }
 
         /* Pink buttons on hover */
         .btn-pink:hover {
-            background-color: #ff005b;
-            border-color: #ff005b;
+            background-color: #e3a935;
+            border-color: #fc0759;
         }
 
         /* Adjustments for the navbar */
@@ -89,29 +89,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" onclick="logout()">Logout</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="loanBook()">Loan a Book</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="ReturnBook()">Return a Book</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="allLoans()">All Loans</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="lateLoans()">Late Loans</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="allcustomers()">All Customers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="allbooks()">All Books</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="findbook()">Find a Book</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="findcust()">Find a Customer</a> -->
+
                     </li>
                 </ul>
             </div>
@@ -231,11 +209,6 @@
             </div>
         </div>
 
-        <!-- Logout Button -->
-        <div class="mt-4 text-center">
-            <button class="btn btn-danger" onclick="logout()">Logout</button>
-        </div>
-    </div>
 
     <!-- Bootstrap JS and jQuery (required for Bootstrap) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
