--- a/frontend/register.html
+++ b/frontend/register.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 
-<body style="background-color: #f17193;">
+<body style="background-color: #efccd6;">
     <h2>User Registration</h2>
     <form id="registerForm">
         <label for="username">Username:</label>
