--- a/frontend/add_book copy.html
+++ b/frontend/add_book copy.html
@@ -12,13 +12,13 @@
 <body style="background-color: #efccd6;">
     <div class="container mt-5">
         <h2>ADD A  BOOK</h2>
-        <div id="welcomeMessage" >
+        <div id="welcomeMessage" style="display: none;">
             <!-- Display welcome message here -->
             <p></p>
         </div>
 
         <!-- Add Book Form -->
-        <form id="addBookForm" >
+        <form id="addBookForm" style="display: none;">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" class="form-control" id="name" name="name" required>
