--- a/frontend/display_allbooks.html
+++ b/frontend/display_allbooks.html
@@ -47,7 +47,7 @@
                 return;
             }
 
-            axios.get('http://localhost:5000/books', {
+            axios.get('https://library-back-nlct.onrender.com/books', {
                     headers: {
                         'Authorization': `Bearer ${accessToken}`
                     }
