--- a/frontend/display_lateloans.html
+++ b/frontend/display_lateloans.html
@@ -54,7 +54,7 @@
                 return;
             }
         
-            axios.get('http://localhost:5000/late_loans', {
+            axios.get('https://library-back-nlct.onrender.com/late_loans', {
                 headers: {
                     'Authorization': `Bearer ${accessToken}`
                 }
