--- a/frontend/find_customer.html
+++ b/frontend/find_customer.html
@@ -49,7 +49,7 @@
             const form = document.getElementById('findCustomerForm');
             const formData = new FormData(form);
 
-            axios.post('http://localhost:5000/find_customer', Object.fromEntries(formData), {
+            axios.post('https://library-back-nlct.onrender.com/find_customer', Object.fromEntries(formData), {
                 headers: {
                     'Authorization': `Bearer ${accessToken}`
                 }
