--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <button type="button" class="btn btn-primary btn-login btn-block" onclick="login()">Login</button>
             </form>
-            <p class="mt-3 text-center">Don't have an account? <a href="http://127.0.0.1:5500/frontend/register.html" class="btn btn-outline-primary">Register</a></p>
+            <p class="mt-3 text-center">Don't have an account? <a href="https://library-back-nlct.onrender.com/register" class="btn btn-outline-primary">Register</a></p>
         </div>
     </div>
 
@@ -72,7 +72,7 @@
             const password = document.getElementById('password').value;
 
             try {
-                const response = await axios.post('http://127.0.0.1:5000/login', {
+                const response = await axios.post('https://library-back-nlct.onrender.com/login', {
                     username,
                     password
                 });
