--- a/frontend/loan_book.html
+++ b/frontend/loan_book.html
@@ -47,7 +47,7 @@
             document.getElementById('loanBookForm').style.display = 'block';
 
             // Fetch the list of all books and populate the dropdown
-            axios.get('http://localhost:5000/all_books', {
+            axios.get('https://library-back-nlct.onrender.com/all_books', {
                 headers: {
                     'Authorization': `Bearer ${accessToken}`
                 }
@@ -89,7 +89,7 @@
             };
     
             // Make a POST request to loan_book endpoint
-            axios.post('http://localhost:5000/loan_book', data, {
+            axios.post('https://library-back-nlct.onrender.com/loan_book', data, {
                     headers: {
                         'Authorization': `Bearer ${accessToken}`
                     }
