--- a/frontend/main copy.html
+++ b/frontend/main copy.html
@@ -244,7 +244,7 @@
         const accessToken = sessionStorage.getItem('access_token');
 
         if (accessToken) {
-            axios.get('https://library-back-nlct.onrender.com/protected', {
+            axios.get('http://localhost:5000/protected', {
                 headers: {
                     'Authorization': `Bearer ${accessToken}`
                 }
@@ -326,61 +326,61 @@
         // Function to add a book
         function addBook() {
             // Navigate to the add_book.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/add_book.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/add_book.html';
         }
 
         // Function to loan a book
         function loanBook() {
             // Navigate to the loan_book.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/loan_book.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/loan_book.html';
         }
 
         // Function to return a book
         function ReturnBook() {
             // Navigate to the return_book.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/return_book.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/return_book.html';
         }
 
         // Function to display all loans
         function allLoans() {
             // Navigate to the display_allloans.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/display_allloans.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/display_allloans.html';
         }
 
         // Function to display late loans
         function lateLoans() {
             // Navigate to the display_lateloans.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/display_lateloans.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/display_lateloans.html';
         }
 
         // Function to display all customers
         function allcustomers() {
             // Navigate to the display_allcustomers.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/display_allcustomers.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/display_allcustomers.html';
         }
 
         // Function to display all books
         function allbooks() {
             // Navigate to the display_allbooks.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/display_allbooks.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/display_allbooks.html';
         }
 
         // Function to find a book
         function findbook() {
             // Navigate to the find_book.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/find_book.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/find_book.html';
         }
 
         // Function to find a customer
         function findcust() {
             // Navigate to the find_customer.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/find_customer.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/find_customer.html';
         }
 
         // Function to find a customer
         function displayUserLoans() {
                     // Navigate to the find_customer.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/cust_loans.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/cust_loans.html';
         }
         
 
@@ -389,7 +389,7 @@
         // Function to register
         function register() {
             // Navigate to the register.html
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/register.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/register.html';
         }
 
         // Function to handle logout
@@ -397,7 +397,7 @@
             // Clear the access token from sessionStorage
             sessionStorage.removeItem('access_token');
             // Redirect to the login page (adjust the URL as needed)
-            window.location.href = 'https://incredible-tarsier-94c79a.netlify.app/index.html';
+            window.location.href = 'http://127.0.0.1:5500/frontend/index.html';
         }
     </script>
 </body>
