--- a/frontend/add_book.html
+++ b/frontend/add_book.html
@@ -72,7 +72,7 @@
                 jsonData[key] = value;
             });
 
-            axios.post('https://library-back-nlct.onrender.com/add_book', jsonData, {
+            axios.post('https://library-project-9mzh.onrender.com/add_book', jsonData, {
                     headers: {
                         'Content-Type': 'application/json',
                         'Authorization': `Bearer ${accessToken}`
