--- a/frontend/display_allcustomers.html
+++ b/frontend/display_allcustomers.html
@@ -51,7 +51,7 @@
                 return;
             }
         
-            axios.get('https://library-back-nlct.onrender.com/customers', {
+            axios.get('https://library-project-9mzh.onrender.com/customers', {
                     headers: {
                         'Authorization': `Bearer ${accessToken}`
                     }
