--- a/frontend/loan_book.html
+++ b/frontend/loan_book.html
@@ -89,7 +89,7 @@
             };
     
             // Make a POST request to loan_book endpoint
-            axios.post('https://library-back-nlct.onrender.com/loan_book', data, {
+            axios.post('https://library-project-9mzh.onrender.com/loan_book', data, {
                     headers: {
                         'Authorization': `Bearer ${accessToken}`
                     }
