--- a/frontend/register.html
+++ b/frontend/register.html
@@ -67,7 +67,7 @@
             const role = document.getElementById('role').value;
 
             try {
-                const response = await axios.post('https://library-back-nlct.onrender.com/register', {
+                const response = await axios.post('https://library-project-9mzh.onrender.com/register', {
                     username,
                     password,
                     name,
