--- a/frontend/cust_loans.html
+++ b/frontend/cust_loans.html
@@ -28,7 +28,7 @@
         const accessToken = sessionStorage.getItem('access_token');
 
         if (accessToken) {
-            axios.get('https://library-back-nlct.onrender.com/user_loans', {
+            axios.get('https://library-project-9mzh.onrender.com/user_loans', {
                 headers: {
                     'Authorization': `Bearer ${accessToken}`
                 }
