--- a/frontend/display_allloans.html
+++ b/frontend/display_allloans.html
@@ -66,7 +66,7 @@
                 return;
             }
         
-            axios.get('https://library-back-nlct.onrender.com/loans', {
+            axios.get('https://library-project-9mzh.onrender.com/loans', {
                     headers: {
                         'Authorization': `Bearer ${accessToken}`
                     }
