--- a/frontend/main.html
+++ b/frontend/main.html
@@ -326,61 +326,61 @@
         // Function to add a book
         function addBook() {
             // Navigate to the add_book.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/add_book.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/add_book.html';
         }
 
         // Function to loan a book
         function loanBook() {
             // Navigate to the loan_book.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/loan_book.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/loan_book.html';
         }
 
         // Function to return a book
         function ReturnBook() {
             // Navigate to the return_book.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/return_book.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/return_book.html';
         }
 
         // Function to display all loans
         function allLoans() {
             // Navigate to the display_allloans.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/display_allloans.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/display_allloans.html';
         }
 
         // Function to display late loans
         function lateLoans() {
             // Navigate to the display_lateloans.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/display_lateloans.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/display_lateloans.html';
         }
 
         // Function to display all customers
         function allcustomers() {
             // Navigate to the display_allcustomers.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/display_allcustomers.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/display_allcustomers.html';
         }
 
         // Function to display all books
         function allbooks() {
             // Navigate to the display_allbooks.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/display_allbooks.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/display_allbooks.html';
         }
 
         // Function to find a book
         function findbook() {
             // Navigate to the find_book.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/find_book.html';
+            window.location.href = 'https://incomparable-chebakia-aa02c9.netlify.app/find_book.html';
         }
 
         // Function to find a customer
         function findcust() {
             // Navigate to the find_customer.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/find_customer.html';
+            window.location.href = 'find_customer.html';
         }
 
         // Function to find a customer
         function displayUserLoans() {
                     // Navigate to the find_customer.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/cust_loans.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/cust_loans.html';
         }
         
 
@@ -389,7 +389,7 @@
         // Function to register
         function register() {
             // Navigate to the register.html
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/register.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/register.html';
         }
 
         // Function to handle logout
@@ -397,7 +397,7 @@
             // Clear the access token from sessionStorage
             sessionStorage.removeItem('access_token');
             // Redirect to the login page (adjust the URL as needed)
-            window.location.href = 'https://beautiful-sunflower-ad707b.netlify.app/index.html';
+            window.location.href = 'https://library-project-9mzh.onrender.com/index.html';
         }
     </script>
 </body>
